Bug 113253 - FILESAVE: PPT: Graphics change their shapes after RT
Summary: FILESAVE: PPT: Graphics change their shapes after RT
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
5.3.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.4.4 target:6.0.0 target:5.4.3
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2017-10-18 23:16 UTC by Xisco Faulí
Modified: 2017-11-02 20:44 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
sample (50.00 KB, application/vnd.ms-powerpoint)
2017-10-18 23:16 UTC, Xisco Faulí
Details
comparison MSO 2010 and LibreOffice 6.0 (132.84 KB, image/png)
2017-10-18 23:17 UTC, Xisco Faulí
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xisco Faulí 2017-10-18 23:16:58 UTC
Created attachment 137089 [details]
sample

Steps to reproduce:
1. Open attached document
2. Save it as .PPT
3. Open the new document and compare.

Observed behaviour: some shapes are coloured completely instead of being cut

Reproduced in

Version: 6.0.0.0.alpha0+
Build ID: 8457b50ffd6e41b4925aef17bed2b5a2f3bf56bd
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

and

Version: 5.2.0.0.alpha1+
Build ID: 5b168b3fa568e48e795234dc5fa454bf24c9805e
CPU Threads: 4; OS Version: Linux 4.8; UI Render: default; 
Locale: ca-ES (ca_ES.UTF-8)

but not in

Version: 4.3.0.0.alpha1+
Build ID: c15927f20d4727c3b8de68497b6949e72f9e6e9e

[Bug found by office-interoperability-tools]
Comment 1 Xisco Faulí 2017-10-18 23:17:56 UTC
Created attachment 137090 [details]
comparison MSO 2010 and LibreOffice 6.0
Comment 2 Mohamed 2017-10-19 08:40:26 UTC
The issue is reproduced in:
    • Operating system : Windows 8.1 Pro 64-bits.
    • LibreOffice : Version: 5.4.2.2
		Build ID: 22b09f6418e8c2d508a9eaf86b2399209b0990f4
		CPU threads: 4; OS: Windows 6.2; UI render: default; 
		Locale: en-US (en_US); Calc: group

     And also in :
    • Operating system : Ubuntu 16.04.3 64-bits.
    • LibreOffice :Version: 5.4.2.2
		Build ID: 22b09f6418e8c2d508a9eaf86b2399209b0990f4
		CPU threads: 8; OS: Linux 4.4; UI render: default; VCL: gtk2; 
		Locale: ja-JP (ja_JP.UTF-8); Calc: group
Comment 3 Xisco Faulí 2017-10-19 09:28:10 UTC
Moving to NEW as per comment 2.
Comment 4 raal 2017-10-19 13:19:01 UTC
This seems to have begun at the below commit.
Adding Cc: to Caolán McNamara; Could you possibly take a look at this one? Thanks
 c405a22c9c8cf76519392b51de4bbbc1a39e969b is the first bad commit
commit c405a22c9c8cf76519392b51de4bbbc1a39e969b
Author: Norbert Thiebaud <nthiebaud@gmail.com>
Date:   Fri Jul 17 10:17:50 2015 -0700

    source b04e1e79e64cb7bb3106fd08a019c27b09bdd5c6

	author	Caolán McNamara <caolanm@redhat.com>	2015-06-10 14:34:44 (GMT)
committer	Caolán McNamara <caolanm@redhat.com>	2015-06-10 16:53:02 (GMT)
commit b04e1e79e64cb7bb3106fd08a019c27b09bdd5c6 (patch)
tree 4e692bdb31e889df82c967a7a1731401816a6678
parent 6cca91f7ada91701443225061a5dd0ae81a98b8e (diff)
Prop_pSegmentInfo is totally misunderstood apparently
Comment 5 Commit Notification 2017-10-20 18:09:15 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bb14f64131148b01f599a91373e81b822d624ba4&h=libreoffice-5-4

Resolves: tdf#113253 graphics change shape after ppt roundtrip

It will be available in 5.4.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2017-10-20 23:13:50 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d4ab059050366d38a1e938cc7c0a2c424dfe1098

Resolves: tdf#113253 graphics change shape after ppt roundtrip

It will be available in 6.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Xisco Faulí 2017-10-23 08:43:43 UTC
Bug verified in

Version: 6.0.0.0.alpha1+
Build ID: d76c4e5c9aaf8bd27ec97679bcaeba5b18aca493
CPU threads: 4; OS: Linux 4.10; UI render: default; VCL: gtk3; 
Locale: ca-ES (ca_ES.UTF-8); Calc: group

Caolán, if work is done here, could you please close this as RESOLVED FIXED?
Comment 8 Commit Notification 2017-11-02 20:44:48 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=6a69400f3e2148d8958abfd8d64af5259c9fd8e8&h=libreoffice-5-4-3

Resolves: tdf#113253 graphics change shape after ppt roundtrip

It will be available in 5.4.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.