Resolves: tdf#113253 graphics change shape after ppt roundtrip

Change-Id: I8e7520c206e909c016298f76fcd5083c98184dc4
Reviewed-on: https://gerrit.libreoffice.org/43608
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>
Tested-by: Caolán McNamara <caolanm@redhat.com>